# ts-deadcode

./: .gitignore  Cargo.toml
node-resolver-rs/: Cargo.toml
node-resolver-rs/src/resolvers/: tsc.rs
src/: lib.rs  main.rs
testdata/: acid.ts  async_import_named.ts  export_decl.ts  export_default_class.ts  export_default_function.ts  export_default_interface.ts  export_default_object.ts  export_foo.ts  export_named.ts  export_named_aliased.ts  export_namespace.ts  import_defaults.ts  import_foo_bar.ts  import_named_aliased_no_enum.ts  import_named_aliased_only_enum.ts  import_named_partial_no_class.ts  import_named_partial_only_class.ts  import_namespace_partial.ts  import_reexported.ts  reexport_all.ts  reexport_all_again.ts  require_default.ts  require_named.ts
