[package]
name = "ts-deadcode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.3.1", features = ["derive"] }
tsconfig = "0.2.0"
swc_atoms = "0.5.3"
swc_common = {version = "0.31.5", features = ["tty-emitter"]}
swc_ecma_parser = {version = "0.133.11", features = ["typescript"]}
swc_ecma_ast = "0.103.5"
swc_ecma_visit = "0.89.5"
swc_ecma_loader = {version = "0.43.7", features = ["node", "tsc"]}
