[package]
name = "ts-deadcode"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
swc_atoms = "0.5.3"
swc_common = {version = "0.31.5", features = ["tty-emitter"]}
swc_ecma_parser = {version = "0.133.11", features = ["typescript"]}
swc_ecma_ast = "0.103.5"
swc_ecma_visit = "0.89.5"
parcel-resolver = {path = "node-resolver-rs"}
